--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,29 @@
+# #frontend\Dockerfile
+
+# # Build stage
+# FROM node:20-alpine AS build
+# WORKDIR /app
+# COPY . .
+# RUN npm install && npm run build
+# RUN npm install recharts 
+
+# # Production stage (serve via nginx)
+# FROM nginx:stable-alpine
+# COPY --from=build /app/dist /usr/share/nginx/html
+# EXPOSE 80
+# CMD ["nginx", "-g", "daemon off;"]
+
+#Teste pra rodar com Tailwind e charts:
+
 # Build stage
 FROM node:20-alpine AS build
 WORKDIR /app
+
+COPY package.json package-lock.json ./
+RUN npm install
+
 COPY . .
-RUN npm install && npm run build && npm run dev
+RUN npm run build
 
 # Production stage (serve via nginx)
 FROM nginx:stable-alpine
