--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "frontend",
   "private": true,
@@ -11,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "echarts-for-react": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "recharts": "^2.15.3"
